# dog_slam

./: .gitignore  .gitmodules  LICENSE  et --hard 1664afe7d8c3ffd960ae4e264cbc4130d2aef152  frames.gv  run.sh  run_lio_sam.sh  run_navigation.sh
LIO-SAM_MID360_ROS2_PKG/ros2/src/LIO-SAM_MID360_ROS2_DOG/: CMakeLists.txt  NAVIGATION_FIX_README.md  package.xml
LIO-SAM_MID360_ROS2_PKG/ros2/src/LIO-SAM_MID360_ROS2_DOG/config/: .nav2_params.yaml.swp  NAVIGATION_CONFIG_OPTIMIZATION.md  bt_straight_then_rotate.xml  gazebo_rviz.rviz  global_config.py  initialpose.yaml  liosam_params.yaml  liosam_params_tilt.yaml  nav2_params.beam.yaml  nav2_params.likelihood.yaml  nav2_params.new.yaml  nav2_params.old.yaml  nav2_params.verbose.yaml  nav2_params.yaml  nav2_params.yaml.bk  nav2_params.yaml.unuse  nav2_params_20151102.yaml  nav2_params_all.yaml  nav2_params_jj.yaml  nav2_params_no_amcl.yaml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml  ndt_params.yaml  params.yaml  robot.urdf.xacro  robot.urdf_tilt.xacro  rviz2.rviz  slam_toolbox_localization.yaml
LIO-SAM_MID360_ROS2_PKG/ros2/src/LIO-SAM_MID360_ROS2_DOG/launch/: __init__.py  gazebo_simulation.launch.py  global_config.launch.py  lio_sam.launch.py  lio_sam_global_config.py  lio_sam_nav2.launch.py  nav2.launch.py  nav2_amcl.launch.py  nav2_slam_toolbox.launch.py  pointcloud_to_laserscan.launch.py  run.launch.py
LIO-SAM_MID360_ROS2_PKG/ros2/src/LIO-SAM_MID360_ROS2_DOG/scripts/: send_goal.py
LIO-SAM_MID360_ROS2_PKG/ros2/src/LIO-SAM_MID360_ROS2_DOG/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
LIO-SAM_MID360_ROS2_PKG/ros2/src/LIO-SAM_MID360_ROS2_DOG/web/: nav2_web_control.html  run_web.sh  run_web_150.sh
LIO-SAM_MID360_ROS2_PKG/ros2/src/LIO-SAM_MID360_ROS2_DOG/worlds/: lio_sam_world.world
LIO-SAM_MID360_ROS2_PKG/ros2/src/Point-LIO_edit/: CMakeLists.txt  package.xml
LIO-SAM_MID360_ROS2_PKG/ros2/src/Point-LIO_edit/config/: avia_ros2.yaml  mid360.yaml
LIO-SAM_MID360_ROS2_PKG/ros2/src/Point-LIO_edit/include/: common_lib.h
LIO-SAM_MID360_ROS2_PKG/ros2/src/Point-LIO_edit/launch_ros2/: mapping.launch.py  mapping_avia.launch.py  mapping_horizon.launch.py  mapping_mid360.launch.py  mapping_ouster64.launch.py  mapping_velody16.launch.py  pointlio_launch.py
LIO-SAM_MID360_ROS2_PKG/ros2/src/Point-LIO_edit/msg/: LocalSensorExternalTrigger.msg  Pose6D.msg
LIO-SAM_MID360_ROS2_PKG/ros2/src/Point-LIO_edit/src/: IMU_Processing.cpp  IMU_Processing.h  laserMapping.cpp  li_initialization.cpp  li_initialization.h  parameters.cpp  parameters.h  preprocess.cpp  preprocess.h
LIO-SAM_MID360_ROS2_PKG/ros2/src/SC_PGO_ROS2/: CMakeLists.txt  package.xml
LIO-SAM_MID360_ROS2_PKG/ros2/src/SC_PGO_ROS2/config/: btc_config.yaml
LIO-SAM_MID360_ROS2_PKG/ros2/src/SC_PGO_ROS2/launch/: sc_pgo.launch.py
LIO-SAM_MID360_ROS2_PKG/ros2/src/SC_PGO_ROS2/src/: btc.cpp  laserPosegraphOptimization.cpp
LIO-SAM_MID360_ROS2_PKG/ros2/src/faster-lio_edit/: CMakeLists.txt  package.xml
LIO-SAM_MID360_ROS2_PKG/ros2/src/faster-lio_edit/app/: CMakeLists.txt  run_mapping_offline.cc  run_mapping_online.cc
LIO-SAM_MID360_ROS2_PKG/ros2/src/faster-lio_edit/cmake/: packages.cmake
LIO-SAM_MID360_ROS2_PKG/ros2/src/faster-lio_edit/config/: avia.yaml  hesai.yaml  horizon.yaml  mid360.yaml  ouster64.yaml  velodyne.yaml  velodyne_liosam.yaml  velodyne_ulhk.yaml  velodyne_utbm.yaml
LIO-SAM_MID360_ROS2_PKG/ros2/src/faster-lio_edit/include/: common_lib.h  imu_processing.hpp  laser_mapping.h  pointcloud_preprocess.h
LIO-SAM_MID360_ROS2_PKG/ros2/src/gazebo/: CMakeLists.txt  package.xml
LIO-SAM_MID360_ROS2_PKG/ros2/src/livox_gazebo_garden/: CMakeLists.txt  package.xml
LIO-SAM_MID360_ROS2_PKG/ros2/src/livox_gazebo_ros2_gpu_simulation/: CMakeLists.txt  README.md  README_zh.md  livox_sim_gpu_laser.xml  package.xml
LIO-SAM_MID360_ROS2_PKG/ros2/src/nav2_dog_slam/: CMakeLists.txt  package.xml
LIO-SAM_MID360_ROS2_PKG/ros2/src/traversability_layer/: CMakeLists.txt  README.md  package.xml  problem.txt  traversability_layer_plugin.xml
old_cartographer/src/livox_slam_online/: CMakeLists.txt  FULL_SYSTEM_USAGE.md  package.xml  setup.cfg
old_cartographer/src/livox_slam_online/config/: cartographer_3d_with_imu.lua  livox_slam.rviz  mid360_config.json
old_cartographer/src/livox_slam_online/launch/: livox_cartographer_launch.py
old_cartographer/src/livox_slam_online/scripts/: data_recorder.py  simple_imu_filter.py
old_cartographer/src/slam_offline/: package.xml  setup.py
old_cartographer/src/slam_offline/config/: cartographer.rviz  nav2_params.yaml
old_cartographer/src/slam_offline/launch/: nav2_navigation.launch.py  static_tf.launch.py
old_cartographer/src/slam_offline/scripts/: example_waypoints.yaml  save_map.sh
src/lio_sam_livox/: CMakeLists.txt  package.xml
src/lio_sam_livox/config/: lio_sam.rviz  lio_sam_config.yaml
src/lio_sam_livox/include/lio_sam/: utility.h
src/lio_sam_livox/launch/: lio_sam_launch.py
src/lio_sam_livox/msg/: CloudInfo.msg
src/lio_sam_livox/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
src/livox_slam_online/: CMakeLists.txt  FULL_SYSTEM_USAGE.md  README.md  USAGE.md  package.xml  setup.cfg  setup.py
src/livox_slam_online/config/: cartographer.rviz  cartographer_3d_with_imu.lua  livox_mid360_cartographer.lua  livox_slam.rviz  mid360_config.json
src/livox_slam_online/launch/: full_slam_system.launch.py  livox_cartographer_launch.py  old_full_slam_system.launch.py  test_lidar_launch.py
src/livox_slam_online/resource/: livox_slam_system
src/livox_slam_online/scripts/: simple_imu_filter.py  slam_manager.py  test_system.py
src/slam_offline/: README.md  README_NAVIGATION.md  package.xml  setup.cfg  setup.py
src/slam_offline/config/: cartographer.rviz  cartographer_3d_with_imu.lua  cartographer_3d_with_imu_bk.lua  lidar_tilt_compensation_readme.md  nav2.rviz
src/slam_offline/launch/: cartographer_3d.launch.py  slam_nav_bringup.launch.py
src/slam_offline/scripts/: nav_waypoints.py
(+1012 files in other folders)
