<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_cartographer_launch</name>
  <version>0.0.0</version>
  <description>Launch files for Cartographer 3D SLAM with Livox LiDAR</description>
  <maintainer email="ypat999@gmail.com">ywj</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
