<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_offline</name>
  <version>0.0.0</version>
  <description>Launch files for Cartographer 3D SLAM with Livox LiDAR and Nav2 navigation</description>
  <maintainer email="ypat999@gmail.com">ywj</maintainer>
  <license>Apache License 2.0</license>

  <!-- SLAM相关依赖 -->
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <!-- Nav2导航相关依赖 -->
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_recoveries</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  
  <!-- 激光扫描转换 -->
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  
  <!-- Python依赖 -->
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
