<?xml version="1.0"?>
<package format="3">
  <name>sc_pgo_ros2</name>
  <version>0.0.0</version>
  <description>
  sc_pgo_ros2
  </description>

  <license>BSD</license>
  <author email="name@email.com">name</author>
  <maintainer email="name@email.com">name</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
