<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>faster_lio</name>
    <version>0.0.0</version>

    <description>
        FasterLIO is developed from FastLIO2, see related paper: Chunge Bai et al. Faster-LIO: Lightweight Tightly
        Coupled Lidar-inertial Odometry
        using Parallel Sparse Incremental Voxels, IEEE RA-Letters, 2022
    </description>

    <maintainer email="gao.xiang.thu@gmail.com">gaoxiang</maintainer>

    <license>BSD</license>

    <author email="gao.xiang.thu@gmail.com">Gao Xiang</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rosidl_default_generators</build_depend>
    
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>pcl_ros</depend>
    <depend>livox_ros_driver2</depend>
    <depend>libgoogle-glog-dev</depend>
    
    <exec_depend>rosidl_default_runtime</exec_depend>
    
    <member_of_group>rosidl_interface_packages</member_of_group>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
