cmake_minimum_required(VERSION 3.5)
project(ros2_livox_simulation)
add_compile_options(-std=c++17)
# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(gazebo_dev REQUIRED)
find_package(gazebo_ros REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(livox_ros_driver2 REQUIRED)
find_package(Boost REQUIRED COMPONENTS chrono)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)
include_directories(
  include
)
include_directories(${GAZEBO_INCLUDE_DIRS})
# Add Gazebo header file paths
include_directories(${GAZEBO_INCLUDE_DIRS})
include_directories(/usr/include/gazebo-11)
include_directories(/usr/include/gazebo-11/gazebo)
# Add SDFormat header file paths for Gazebo 11 compatibility
include_directories(/usr/include/sdformat-9.7)
include_directories(/usr/include/sdformat-9.7/sdf)
# Add Ignition Math header file paths for SDF 9.7 compatibility
include_directories(/usr/include/ignition/math6)
include_directories(/usr/include/ignition/math6/ignition/math)
# Add Ignition Common header file paths (may be needed by math)
include_directories(/usr/include/ignition/common3)
include_directories(/usr/include/ignition/common3/ignition/common)
# Add Ignition Msgs header file paths for Gazebo 11
include_directories(/usr/include/ignition/msgs5)
include_directories(/usr/include/ignition/msgs5/ignition/msgs)
# Add Ignition Transport header file paths for Gazebo 11
include_directories(/usr/include/ignition/transport8)
include_directories(/usr/include/ignition/transport8/ignition/transport)
# Add Ignition Fuel Tools header file paths for Gazebo 11
include_directories(/usr/include/ignition/fuel_tools4)
include_directories(/usr/include/ignition/fuel_tools4/ignition/fuel_tools)
link_directories(${GAZEBO_LIBRARY_DIRS})
# Add Gazebo plugin library paths
link_directories(/usr/lib/x86_64-linux-gnu/gazebo-11/plugins)



install(DIRECTORY include/ 
        DESTINATION include
)

install(
  DIRECTORY launch rviz urdf worlds meshes config python_scripts
  DESTINATION share/${PROJECT_NAME}
)






file(GLOB PYTHON_SCRIPTS 
  "${CMAKE_CURRENT_SOURCE_DIR}/python_scripts/*.py"  
)


install(
  FILES ${PYTHON_SCRIPTS}  # 要安装的文件：所有Python脚本
  DESTINATION lib/${PROJECT_NAME}  # 安装目标路径（ROS 2标准，PROJECT_NAME即你的包名）
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ  # 所有者权限（执行/写/读）
              GROUP_EXECUTE GROUP_READ              # 组用户权限（执行/读）
              WORLD_EXECUTE WORLD_READ              # 其他用户权限（执行/读）
)



# install(
#   DIRECTORY python_scripts/
#   DESTINATION lib/
# )


install(
  DIRECTORY scan_mode
  DESTINATION share/${PROJECT_NAME}
  FILES_MATCHING PATTERN "*.csv"
)

add_library(ros2_livox SHARED src/livox_points_plugin.cpp src/livox_ode_multiray_shape.cpp)
target_link_libraries(ros2_livox ${GAZEBO_LIBRARIES} RayPlugin GpuRayPlugin)
ament_target_dependencies(ros2_livox rclcpp std_msgs sensor_msgs geometry_msgs gazebo_dev gazebo_ros tf2_ros livox_ros_driver2 )
target_link_libraries(ros2_livox libprotobuf.so.9)
target_link_libraries(ros2_livox libboost_chrono.so.1.71.0)
target_include_directories(ros2_livox PRIVATE include)

#install(TARGETS ros2_livox DESTINATION lib/${PROJECT_NAME})

install(TARGETS ros2_livox
    LIBRARY DESTINATION lib)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_libraries(
  ros2_livox
)

# set(CSV_FILES
#     scan_mode/mid40.csv
#     scan_mode/mid70.csv
#     scan_mode/mid360.csv
#     scan_mode/tele.csv
#     scan_mode/horizon.csv
#     scan_mode/HAP.csv
#     scan_mode/avia.csv
# )
# foreach(CSV_FILE ${CSV_FILES})
#     configure_file(${CSV_FILE} ${CMAKE_CURRENT_BINARY_DIR}/${CSV_FILE} COPYONLY)
#     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CSV_FILE}
#         DESTINATION share/${PROJECT_NAME}/scan_mode
#     )
# endforeach()

# set(URDF_FILES
#     urdf/livox_mid40.xacro
#     urdf/livox_mid70.xacro
#     urdf/livox_mid360.xacro
#     urdf/livox_tele.xacro
#     urdf/livox_horizon.xacro
#     urdf/livox_HAP.xacro
#     urdf/livox_avia.xacro
# )
# foreach(URDF_FILES ${URDF_FILES})
#     configure_file(${URDF_FILES} ${CMAKE_CURRENT_BINARY_DIR}/${URDF_FILES} COPYONLY)
#     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${URDF_FILES}
#         DESTINATION share/${PROJECT_NAME}/urdf
#     )
# endforeach()

ament_package()
