<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>livox_gazebo_garden</name>
  <version>1.0.0</version>
  <description>Livox LiDAR simulation plugin for Gazebo Garden (gz-sim) with ROS2 support</description>
  <maintainer email="12411711@mail.sustech.edu.cn">Wenji Xu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_cpp</depend>
  <depend>livox_ros_driver2</depend>

  <depend>gz-sim7</depend>
  <depend>gz-sensors7</depend>
  <depend>gz-transport12</depend>
  <depend>gz-msgs9</depend>
  <depend>gz-math7</depend>
  <depend>sdformat12</depend>

  <build_depend>ros_gz_bridge</build_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
